@@ -1,3 +1,8 @@
+2007-09-21  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/agents/save.py:
+	Fix error saving after splitting project. (#10041)
+
 2007-09-20  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/gtk/renderers/multiline.py (_on_editor_focus_out_event):
